1. setup testing environment
2. removed need for borders.  also removed a potential bug that may cause problems:  if x ==0 or x == sx-1, neighbors are not inspected correctly.
3. [ix][ty] is probably not useful - ty is accessed in parallel.  so for each iteration of ix, actually want ty to be as the inner loop.


4. debug imrecon-int code. - binary version works.  why does int version not?
	4.1 - check all image tests as binary and as int. - definitely have a problem when it's int.
	4.2 - test the x and y separately.  problem is with x.
	4.3 - was calling forward and backward x2 with thread block set up for x.
	working now.  now start the optimization. (the 4conn shows same number of iterations as Pavel code, should be working.)
	4.4 - binary has been using x2.  int has been using x.  now try int with x2. - slower.  for imrecon-gray-* input, 4conn is 600ms slower, and 8conn is 200ms slower.

5. bank conflict - not much difference right now.
6. use of T* (local memory?) - switch to shared...
7. reduce register usage (maybe by removing the use of DevMem2D?)